--- a/hw1/Dockerfile
+++ b/hw1/Dockerfile
@@ -3,6 +3,6 @@ RUN pip3 install numpy matplotlib PyQtChart && \
     apt update -y && \
     apt install -y python3-pyqt5
 
-COPY . /app/src/
-WORKDIR /app/src
+COPY . /app/
+WORKDIR /app/
 RUN python3 setup.py install
