--- a/hw1/Dockerfile
+++ b/hw1/Dockerfile
@@ -1,8 +1,5 @@
 FROM python:3.7-stretch
-RUN pip3 install numpy matplotlib PyQtChart && \
-    apt update -y && \
-    apt install -y python3-pyqt5
-
 COPY . /app/
+RUN /app/setup.sh
 WORKDIR /app/
-RUN python3 setup.py install
+CMD ["/app/run.sh"]
